# ShenBi

./: README.md  README_CN.md  pyproject.toml  upload_pypi.bat  upload_pypi.sh
demo/: demo_all_features.py  demo_compat_test.py  demo_performance.py  demo_pyqtgraph_2d.py  demo_pyqtgraph_3d.py  tutorial.md  tutorial_cn.md
demo/output/: benchmark_report.md  benchmark_report_cn.md  benchmark_results.json
shenbi/: __init__.py  artists.py  axes.py  cm.py  colors.py  figure.py  line.py  mplot3d.py  pyplot.py  utils.py
shenbi/tests/: test_shenbi.py
