[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shenbi"
dynamic = ["version"]
description = "神笔 (ShenBi) - matplotlib syntax with pyqtgraph performance"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Fred", email = "fred@example.com"},
]
keywords = ["plotting", "visualization", "pyqtgraph", "matplotlib", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pyqtgraph>=0.13.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
pyqt5 = ["PyQt5>=5.15"]
pyqt6 = ["PyQt6>=6.4"]
pyside2 = ["PySide2>=5.15"]
pyside6 = ["PySide6>=6.4"]

[project.urls]
Homepage = "https://github.com/CodeOfMe/ShenBi"
Repository = "https://github.com/CodeOfMe/ShenBi"

[tool.hatch.version]
path = "shenbi/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["shenbi"]
